fix jumpy scroll
change ref position

--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -277,6 +277,7 @@ strong {
 .techContainer{
     min-height: 50vh;
     background-color: rgb(255, 255, 255);
+    padding: 1rem 0;
 }
 
 .techList{
